# PointilSynth

./: .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Dockerfile  GrainEnvelope.h  README.md  Resampler.h
.github/workflows/: cmake.yml  codeql.yml  post-merge-builds.yml  publish-docker-image.yml
Source/UI/: PresetBrowserComponent.cpp  VisualizationComponent.cpp
Testing/Temporary/: CTestCostData.txt
cmake/: CompilerWarnings.cmake
jules_docs/: product_requirements.md  sprint_master_plan.md  tech_stack_plan.md
plugin/: AGENTS.md  CMakeLists.txt
plugin/include/: PodComponent.h
plugin/include/Data/: PresetManager.h
plugin/include/Pointilsynth/: ConfigManager.h  DebugUIPanel.h  DebugUIWindow.h  DebugWindow.h  GrainEnvelope.h  InertialHistoryManager.h  Oscillator.h  PluginEditor.h  PluginProcessor.h  PointilismInterfaces.h  PresetManager.h  ProjectInfo.h.in  Resampler.h
plugin/include/Pointilsynth/UI/: PodComponent.h
plugin/include/UI/: InertialHistoryVisualizer.h  PresetBrowserComponent.h  VisualizationComponent.h
plugin/source/: AudioEngine.cpp  ConfigManager.cpp  DebugUIPanel.cpp  DebugUIPanel.h  DebugUIWindow.cpp  DebugWindow.cpp  InertialHistoryManager.cpp  PluginEditor.cpp  PluginProcessor.cpp  PodComponent.cpp  PodComponent.h  PointilismInterfaces.cpp  PointilismInterfaces.h  PresetBrowserComponent.cpp  PresetBrowserComponent.h  PresetManager.cpp  StochasticModel.cpp
plugin/source/Data/: PresetManager.cpp  PresetManager.h
plugin/source/UI/: InertialHistoryVisualizer.cpp  PodComponent.cpp  PresetBrowserComponent.cpp  PresetBrowserComponent.h  VisualizationComponent.cpp  VisualizationComponent.h
test/: CMakeLists.txt
test/source/: AudioEngineTest.cpp  AudioProcessorTest.cpp  DebugUIPanelTest.cpp  GrainEnvelopeTest.cpp  InertialHistoryManagerTest.cpp  OscillatorTest.cpp  PluginEditorTest.cpp  PluginProcessorTest.cpp  PointilismInterfacesTest.cpp  PresetManagerTest.cpp  ResamplerTest.cpp  StandaloneGrainEnvelopeTest.cpp  StochasticModelListenerTest.cpp  StochasticModelTest.cpp  TestMain.cpp
test/source/UI/: InertialHistoryVisualizerTest.cpp  PodComponentTest.cpp  PresetBrowserComponentTest.cpp  VisualizationComponentTest.cpp
